# quire

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  _config.yml  index.md
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
examples/: basic_example.cpp  example_basic.cpp  example_channels.cpp  example_custom_log_levels.cpp  example_log_file.cpp  example_multithread.cpp  example_progress.cpp  example_quire.cpp  example_registry.cpp
include/quire/: colors.hpp  quire.hpp  registry.hpp
src/: quire.cpp  registry.cpp
